--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -115,7 +115,7 @@ jobs:
       # Build and publish image to Artifact Registry
       - name: Build and Publish with Buildpacks
         uses: buildpacks/github-actions/setup-pack@v5.0.0
-        run: |-
+        run: 
           pack config default-builder gcr.io/buildpacks.builder:v1
           pack build ${{ env.SOURCE_CODE_DIRECTORY }}
           pack --publish  ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}
