change in Build and Publish with Buildpacks step - commented uses field

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,7 +114,7 @@ jobs:
 
       # Build and publish image to Artifact Registry
       - name: Build and Publish with Buildpacks
-        uses: buildpacks/github-actions/setup-pack@v5.0.0
+      #  uses: buildpacks/github-actions/setup-pack@v5.0.0
         run: 
           pack config default-builder gcr.io/buildpacks.builder:v1
           pack build ${{ env.SOURCE_CODE_DIRECTORY }}
