change in GAR authentication step

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,9 +36,9 @@ jobs:
       # BEGIN - Docker auth
 
       # Authenticate Docker to Google Cloud Artifact Registry
-      - name: Docker Auth
+      - name: Login to GAR
         id: docker-auth
-        uses: 'docker/login-action@v1'
+        uses: 'docker/login-action@v3'
         with:
           username: 'oauth2accesstoken'
           password: '${{ steps.auth.outputs.access_token }}'
