--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,10 @@
 name: Build and Deploy to Cloud Run
 
 on:
-  push:
-    branches:
-      - $default-branch
+  workflow_dispatch
+#  push:
+#    branches:
+#      - $default-branch
 
 jobs:
   deploy:
