--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,9 @@ jobs:
         with:
           username: 'oauth2accesstoken'
           password: '${{ steps.auth.outputs.access_token }}'
-          registry: '${{ env.GAR_LOCATION }}-docker.pkg.dev'
+         # registry: '${{ env.GAR_LOCATION }}-docker.pkg.dev'
+          registry: 'europe-central2-docker.pkg.dev'
+         
           
       # NOTE: Alternative option - authentication via credentials json
       # - name: Docker Auth
