--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,9 +58,11 @@ jobs:
 
       # BEGIN - Pack download, build and publish 
 
+      - name: Install pack CLI via the official buildpack Action https://github.com/buildpacks/github-actions#setup-pack-cli-action
+        uses: buildpacks/github-actions/setup-pack@v5.0.0
+        
       # Build and publish image to Artifact Registry
       - name: Build and Publish with Buildpacks
-      #  uses: buildpacks/github-actions/setup-pack@v5.0.0
         run: 
           pack config default-builder gcr.io/buildpacks.builder:v1
           pack build ${{ env.SOURCE_CODE_DIRECTORY }}
