--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,14 +26,7 @@ jobs:
           token_format: 'access_token'
           workload_identity_provider: '${{ secrets.WIF_PROVIDER }}' # e.g. - projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider
           service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}' # e.g. - my-service-account@my-project.iam.gserviceaccount.com
-
-      # NOTE: Alternative option - authentication via credentials json
-      # - name: Google Auth
-      #   id: auth
-      #   uses: 'google-github-actions/auth@v0'
-      #   with:
-      #     credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
-
+          
       # BEGIN - Docker auth
 
       # Authenticate Docker to Google Cloud Artifact Registry
@@ -45,28 +38,27 @@ jobs:
           password: '${{ steps.auth.outputs.access_token }}'
          # registry: '${{ env.GAR_LOCATION }}-docker.pkg.dev'
           registry: 'europe-central2-docker.pkg.dev'
-         
-          
-      # NOTE: Alternative option - authentication via credentials json
-      # - name: Docker Auth
-      # id: docker-auth
-      # uses: 'docker/login-action@v1'
-      # with:
-      #   registry: ${{ env.GAR_LOCATION }}-docker.pkg.dev
-      #   username: _json_key
-      #   password: ${{ secrets.GCP_CREDENTIALS }}
 
       # BEGIN - Pack download, build and publish 
 
       - name: Install pack CLI via the official buildpack Action https://github.com/buildpacks/github-actions#setup-pack-cli-action
         uses: buildpacks/github-actions/setup-pack@v5.0.0
         
-      # Build and publish image to Artifact Registry
-      - name: Build and Publish with Buildpacks
-        run: 
-          pack config default-builder gcr.io/buildpacks.builder:v1
-          pack build ${{ env.SOURCE_CODE_DIRECTORY }}
-          pack --publish  ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}
+#      # Build and publish image to Artifact Registry
+#      - name: Build and Publish with Buildpacks
+#        run: 
+#          pack config default-builder gcr.io/buildpacks.builder:v1
+#          pack build ${{ env.SOURCE_CODE_DIRECTORY }}
+#          pack --publish  ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}
+
+      # alternative build step
+      - name: Build app with pack CLI & publish to GitHub Container Registry
+        run: |
+          pack build ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }} \
+              --builder paketobuildpacks/builder:tiny \
+              --path . \
+              --publish
+
 
       # END - Docker auth, pack download, buildpack build and publish
 
